// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListingPage individual fields Accessibility, Amenities, Fees fields 1`] = `
<div
  className="content-card padding-bottom-none margin-bottom--half bg-trans"
>
  <h4
    className="content-card_title t-serif"
  >
    Accessibility, Amenities, Fees
  </h4>
  <ul
    className="content-grid"
  >
    <li
      className="content-item"
    >
      <div
        className="content-card"
      >
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Accessibility
          </h4>
          <p>
            Elevator to all floors
          </p>
        </div>
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Amenities
          </h4>
          <p>
            Laundry room, underground parking, courtyard, bike room
          </p>
        </div>
      </div>
    </li>
    <li
      className="content-item"
    >
      <div
        className="content-card"
      >
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Deposit Min
          </h4>
          <p>
            2102.0
          </p>
        </div>
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Deposit Max
          </h4>
          <p>
            2355.0
          </p>
        </div>
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Costs Not Included
          </h4>
          <p>
            Tenants pay for gas, electricity.

For pet fees:  Cat is allowed with a $500 refundable deposit, $250 non-refundable cleaning fee and a pet addendum.  

Dogs are not allowed in the building.  

One parking space per unit available for $175 a month.
          </p>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ListingPage individual fields Additional Eligibility Rules fields 1`] = `
<div
  className="content-card padding-bottom-none margin-bottom--half bg-trans"
>
  <h4
    className="content-card_title t-serif"
  >
    Additional Eligibility Rules
  </h4>
  <ul
    className="content-grid"
  >
    <li
      className="content-item"
    >
      <div
        className="content-card"
      >
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Building Selection Criteria
          </h4>
          <a
            href="https://us.awp.autotask.net/1/filelink/113bd-37ed41a1-53a7f01459-2"
            target="_blank"
          >
            https://us.awp.autotask.net/1/filelink/113bd-37ed41a1-53a7f01459-2
          </a>
        </div>
      </div>
    </li>
    <li
      className="content-item"
    >
      <div
        className="content-card"
      >
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Credit Rating
          </h4>
          <p>
            Provide a credit report with score from Equifax, Experian, or TransUnion dated within thirty (30) days of the application. 

Accounts that are not current or that are derogatory will negatively affect the overall scoring, which could result in the denial of the application or an additional deposit may be required. 

Collection accounts exceeding a combined amount of $1,000.00 (excluding student loans and medical debt) will negatively affect the overall scoring, which could result in the denial of the application or an additional deposit may be required. 

Bankruptcy if not cleared will be an automatic denial of the rental application. 

No Guarantors permitted.

Mitigating circumstances may be considered.
          </p>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ListingPage individual fields Additional Information fields 1`] = `
<div
  className="content-card padding-bottom-none margin-bottom--half bg-trans"
>
  <h4
    className="content-card_title t-serif"
  >
    Additional Information
  </h4>
  <ul
    className="content-grid"
  >
    <li
      className="content-item"
    >
      <div
        className="content-card"
      >
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Required Documents
          </h4>
          <p>
            Lottery winners will be required to fill out a building application and provide a copy of your current credit report, 3 most recent paystubs, current tax returns and W-2, and 3 most recent bank statements.
          </p>
        </div>
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Smoking Policy
          </h4>
          <p>
            Non-smoking building
          </p>
        </div>
      </div>
    </li>
    <li
      className="content-item"
    >
      <div
        className="content-card"
      >
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Legal Disclaimers
          </h4>
          <p
            dangerouslySetInnerHTML={
              Object {
                "__html": "<span style='font-size: 10pt;'><span style='font-family: arial,sans-serif;'>All BMR renters must review and acknowledge the </span></span><a href='http://sf-moh.org/index.aspx?page=295' target='_blank'><span style='font-size: 10pt;'><span style='font-family: arial,sans-serif;'><span style='color: rgb(0, 0, 255);'>Inclusionary Affordable Housing Program Monitoring and Procedures Manual 2013</span></span></span></a><span style='font-size: 10pt;'><span style='font-family: arial,sans-serif;'> that governs this property upon the signing of a lease for a BMR unit. </span></span><br> <br><span style='font-size: 10pt;'><span style='font-family: arial,sans-serif;'>Applicants should be informed that BMR rental units in some buildings may convert to ownership units in the future.  In the case of conversion, BMR renters will be afforded certain rights as explained in the </span></span><a href='http://sf-moh.org/index.aspx?page=295' target='_blank'><span style='font-size: 10pt;'><span style='font-family: arial,sans-serif;'><span style='color: rgb(0, 0, 255);'>Inclusionary Affordable Housing Program Monitoring and Procedures Manual 2013</span></span></span></a><span style='font-size: 10pt;'><span style='font-family: arial,sans-serif;'>. Applicants should inquire with the building contact person listed above to determine if the building has a minimum number of years that it must remain a rental building.  (Some buildings may have such restrictions based on government sources of financing for their building.) Most buildings may have no restrictions on conversion at all. </span></span><br> <br><span style='font-size: 10pt;'><span style='font-family: arial,sans-serif;'>It is also important to note that units governed by the Inclusionary Housing Program are NOT governed by the San Francisco Rent Ordinance (also known as “rent control”). Among other rules, rents may increase beyond increases allowed under “rent control.”  Please see the </span></span><span style='font-size: 12pt;'><span style='font-family: times new roman,serif;'><a href='http://sf-moh.org/index.aspx?page=295' target='_blank'><span style='font-size: 10pt;'><span style='font-family: arial,sans-serif;'><span style='color: rgb(0, 0, 255);'>Inclusionary Affordable Housing Program Monitoring and Procedures Manual 2013</span></span></span></a></span></span><span style='font-size: 10pt;'><span style='font-family: arial,sans-serif;'> for more information. </span></span>",
              }
            }
          />
        </div>
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Pet Policy
          </h4>
          <p>
            Dogs are not allowed in the building.
          </p>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ListingPage individual fields Application Information fields 1`] = `
<div
  className="content-card padding-bottom-none margin-bottom--half bg-trans"
>
  <h4
    className="content-card_title t-serif"
  >
    Application Information
  </h4>
  <ul
    className="content-grid"
  >
    <li
      className="content-item"
    >
      <div
        className="content-card"
      >
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Application Phone
          </h4>
          <p>
            (415) 227-2256
          </p>
        </div>
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Application Organization
          </h4>
          <p>
            280 Fell-BMR
          </p>
        </div>
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Application Street Address
          </h4>
          <p>
            P.O. Box 420847
          </p>
        </div>
      </div>
    </li>
    <li
      className="content-item"
    >
      <div
        className="content-card"
      >
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Application City
          </h4>
          <p>
            San Francisco
          </p>
        </div>
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Application State
          </h4>
          <p>
            CA
          </p>
        </div>
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Application Postal Code
          </h4>
          <p>
            94142
          </p>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ListingPage individual fields Building Information fields 1`] = `
<div
  className="content-card padding-bottom-none margin-bottom--half bg-trans"
>
  <h4
    className="content-card_title t-serif"
  >
    Building Information
  </h4>
  <ul
    className="content-grid"
  >
    <li
      className="content-item"
    >
      <div
        className="content-card"
      >
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Building Name
          </h4>
          <p>
            Automated Test Building
          </p>
        </div>
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Building Street Address
          </h4>
          <p>
            2601 Mission St
          </p>
        </div>
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Building City
          </h4>
          <p>
            San Francisco
          </p>
        </div>
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Building State
          </h4>
          <p>
            CA
          </p>
        </div>
      </div>
    </li>
    <li
      className="content-item"
    >
      <div
        className="content-card"
      >
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Neighborhood
          </h4>
          <p>
            Hayes Valley
          </p>
        </div>
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Developer
          </h4>
          <p>
            TEST Property Manager
          </p>
        </div>
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Building URL
          </h4>
          <a
            href="https://s-media-cache-ak0.pinimg.com/736x/a4/b7/e1/a4b7e1cb9732fb672483fcd61c7f70b9.jpg"
            target="_blank"
          >
            https://s-media-cache-ak0.pinimg.com/736x/a4/b7/e1/a4b7e1cb9732fb672483fcd61c7f70b9.jpg
          </a>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ListingPage individual fields Details fields 1`] = `
<div
  className="content-card padding-bottom-none margin-bottom--half bg-trans"
>
  <h4
    className="content-card_title t-serif"
  >
    Details
  </h4>
  <ul
    className="content-grid"
  >
    <li
      className="content-item"
    >
      <div
        className="content-card"
      >
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Name
          </h4>
          <p>
            Automated Test Listing (please do not modify)
          </p>
        </div>
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Application Due Date
          </h4>
          <p>
            01/01/2021
          </p>
        </div>
      </div>
    </li>
    <li
      className="content-item"
    >
      <div
        className="content-card"
      >
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Applications in Lottery
          </h4>
          <p>
            true
          </p>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ListingPage individual fields Leasing Agent and Developer Information fields 1`] = `
<div
  className="content-card padding-bottom-none margin-bottom--half bg-trans"
>
  <h4
    className="content-card_title t-serif"
  >
    Leasing Agent and Developer Information
  </h4>
  <ul
    className="content-grid"
  >
    <li
      className="content-item"
    >
      <div
        className="content-card"
      />
    </li>
    <li
      className="content-item"
    >
      <div
        className="content-card"
      />
    </li>
  </ul>
</div>
`;

exports[`ListingPage individual fields Lottery Information fields 1`] = `
<div
  className="content-card padding-bottom-none margin-bottom--half bg-trans"
>
  <h4
    className="content-card_title t-serif"
  >
    Lottery Information
  </h4>
  <ul
    className="content-grid"
  >
    <li
      className="content-item"
    >
      <div
        className="content-card"
      >
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Lottery Date
          </h4>
          <p>
            03/22/2017
          </p>
        </div>
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Lottery Results Date
          </h4>
          <p>
            03/23/2017
          </p>
        </div>
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Lottery Venue
          </h4>
          <p>
            MOHCD
          </p>
        </div>
      </div>
    </li>
    <li
      className="content-item"
    >
      <div
        className="content-card"
      >
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Lottery Status
          </h4>
          <p>
            Not Yet Run
          </p>
        </div>
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Lottery Street Address
          </h4>
          <p>
            1 S. Van Ness Avenue 5th FL
          </p>
        </div>
        <div
          className="margin-bottom--half"
        >
          <h4
            className="t-sans t-small t-bold no-margin"
          >
            Lottery City
          </h4>
          <p>
            San Francisco
          </p>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ListingPage should render succesfully 1`] = `
Array [
  <header
    className="lead-header short  bg-snow"
  >
    <div
      className="row full-width inner--3x"
    >
      <div
        className="large-12 columns"
      >
        <hgroup
          className="lead-header_group"
        >
          <h1
            className="lead-header_title small-serif c-oil"
          >
            Automated Test Listing (please do not modify)
          </h1>
          <div
            className="medium-8 columns no-padding"
          />
          <div
            className="medium-4 columns no-padding"
          >
            <span
              className="lead-header_secondary-action"
            >
              <a
                className="button tiny margin-left--half"
                href="/listings/0/edit"
              >
                Edit Listing
              </a>
            </span>
          </div>
        </hgroup>
      </div>
    </div>
  </header>,
  <div
    className="tabs-section tabs-row row full-width inner--3x bg-snow"
  >
    <ul
      className="tabs full-width-small-only"
      role="menubar"
    >
      <li
        className="tab-title"
        role="none"
      >
        <a
          aria-selected={false}
          href="/listings/0"
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="0"
        >
          Listing Details
        </a>
      </li>
      <li
        className="tab-title"
        role="none"
      >
        <a
          aria-selected={false}
          href="/listings/0/applications"
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="0"
        >
          Applications
        </a>
      </li>
    </ul>
  </div>,
  <section
    className="tabs-card-row row full-width inner--3x margin-bottom--2x"
  >
    <div
      className="app-card form-card tabs-card max-width expand-on-small"
    >
      <div>
        <div
          className="content-card padding-bottom-none margin-bottom--half bg-trans"
        >
          <h4
            className="content-card_title t-serif"
          >
            Details
          </h4>
          <ul
            className="content-grid"
          >
            <li
              className="content-item"
            >
              <div
                className="content-card"
              >
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Name
                  </h4>
                  <p>
                    Automated Test Listing (please do not modify)
                  </p>
                </div>
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Application Due Date
                  </h4>
                  <p>
                    01/01/2021
                  </p>
                </div>
              </div>
            </li>
            <li
              className="content-item"
            >
              <div
                className="content-card"
              >
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Applications in Lottery
                  </h4>
                  <p>
                    true
                  </p>
                </div>
              </div>
            </li>
          </ul>
        </div>
        <div
          className="content-card padding-bottom-none margin-bottom--half bg-trans"
        >
          <h4
            className="content-card_title t-serif"
          >
            Building Information
          </h4>
          <ul
            className="content-grid"
          >
            <li
              className="content-item"
            >
              <div
                className="content-card"
              >
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Building Name
                  </h4>
                  <p>
                    Automated Test Building
                  </p>
                </div>
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Building Street Address
                  </h4>
                  <p>
                    2601 Mission St
                  </p>
                </div>
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Building City
                  </h4>
                  <p>
                    San Francisco
                  </p>
                </div>
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Building State
                  </h4>
                  <p>
                    CA
                  </p>
                </div>
              </div>
            </li>
            <li
              className="content-item"
            >
              <div
                className="content-card"
              >
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Neighborhood
                  </h4>
                  <p>
                    Hayes Valley
                  </p>
                </div>
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Developer
                  </h4>
                  <p>
                    TEST Property Manager
                  </p>
                </div>
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Building URL
                  </h4>
                  <a
                    href="https://s-media-cache-ak0.pinimg.com/736x/a4/b7/e1/a4b7e1cb9732fb672483fcd61c7f70b9.jpg"
                    target="_blank"
                  >
                    https://s-media-cache-ak0.pinimg.com/736x/a4/b7/e1/a4b7e1cb9732fb672483fcd61c7f70b9.jpg
                  </a>
                </div>
              </div>
            </li>
          </ul>
        </div>
        <div
          className="content-card padding-bottom-none margin-bottom--half bg-trans"
        >
          <h4
            className="content-card_title t-serif"
          >
            Accessibility, Amenities, Fees
          </h4>
          <ul
            className="content-grid"
          >
            <li
              className="content-item"
            >
              <div
                className="content-card"
              >
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Accessibility
                  </h4>
                  <p>
                    Elevator to all floors
                  </p>
                </div>
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Amenities
                  </h4>
                  <p>
                    Laundry room, underground parking, courtyard, bike room
                  </p>
                </div>
              </div>
            </li>
            <li
              className="content-item"
            >
              <div
                className="content-card"
              >
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Deposit Min
                  </h4>
                  <p>
                    2102.0
                  </p>
                </div>
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Deposit Max
                  </h4>
                  <p>
                    2355.0
                  </p>
                </div>
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Costs Not Included
                  </h4>
                  <p>
                    Tenants pay for gas, electricity.

For pet fees:  Cat is allowed with a $500 refundable deposit, $250 non-refundable cleaning fee and a pet addendum.  

Dogs are not allowed in the building.  

One parking space per unit available for $175 a month.
                  </p>
                </div>
              </div>
            </li>
          </ul>
        </div>
        <div
          className="content-card padding-bottom-none margin-bottom--half bg-trans"
        >
          <h4
            className="content-card_title t-serif"
          >
            Lottery Information
          </h4>
          <ul
            className="content-grid"
          >
            <li
              className="content-item"
            >
              <div
                className="content-card"
              >
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Lottery Date
                  </h4>
                  <p>
                    03/22/2017
                  </p>
                </div>
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Lottery Results Date
                  </h4>
                  <p>
                    03/23/2017
                  </p>
                </div>
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Lottery Venue
                  </h4>
                  <p>
                    MOHCD
                  </p>
                </div>
              </div>
            </li>
            <li
              className="content-item"
            >
              <div
                className="content-card"
              >
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Lottery Status
                  </h4>
                  <p>
                    Not Yet Run
                  </p>
                </div>
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Lottery Street Address
                  </h4>
                  <p>
                    1 S. Van Ness Avenue 5th FL
                  </p>
                </div>
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Lottery City
                  </h4>
                  <p>
                    San Francisco
                  </p>
                </div>
              </div>
            </li>
          </ul>
        </div>
        <div
          className="content-card padding-bottom-none margin-bottom--half bg-trans"
        >
          <h4
            className="content-card_title t-serif"
          >
            Application Information
          </h4>
          <ul
            className="content-grid"
          >
            <li
              className="content-item"
            >
              <div
                className="content-card"
              >
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Application Phone
                  </h4>
                  <p>
                    (415) 227-2256
                  </p>
                </div>
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Application Organization
                  </h4>
                  <p>
                    280 Fell-BMR
                  </p>
                </div>
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Application Street Address
                  </h4>
                  <p>
                    P.O. Box 420847
                  </p>
                </div>
              </div>
            </li>
            <li
              className="content-item"
            >
              <div
                className="content-card"
              >
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Application City
                  </h4>
                  <p>
                    San Francisco
                  </p>
                </div>
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Application State
                  </h4>
                  <p>
                    CA
                  </p>
                </div>
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Application Postal Code
                  </h4>
                  <p>
                    94142
                  </p>
                </div>
              </div>
            </li>
          </ul>
        </div>
        <div
          className="content-card padding-bottom-none margin-bottom--half bg-trans"
        >
          <h4
            className="content-card_title t-serif"
          >
            Leasing Agent and Developer Information
          </h4>
          <ul
            className="content-grid"
          >
            <li
              className="content-item"
            >
              <div
                className="content-card"
              />
            </li>
            <li
              className="content-item"
            >
              <div
                className="content-card"
              />
            </li>
          </ul>
        </div>
        <div
          className="content-card padding-bottom-none margin-bottom--half bg-trans"
        >
          <h4
            className="content-card_title t-serif"
          >
            Additional Eligibility Rules
          </h4>
          <ul
            className="content-grid"
          >
            <li
              className="content-item"
            >
              <div
                className="content-card"
              >
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Building Selection Criteria
                  </h4>
                  <a
                    href="https://us.awp.autotask.net/1/filelink/113bd-37ed41a1-53a7f01459-2"
                    target="_blank"
                  >
                    https://us.awp.autotask.net/1/filelink/113bd-37ed41a1-53a7f01459-2
                  </a>
                </div>
              </div>
            </li>
            <li
              className="content-item"
            >
              <div
                className="content-card"
              >
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Credit Rating
                  </h4>
                  <p>
                    Provide a credit report with score from Equifax, Experian, or TransUnion dated within thirty (30) days of the application. 

Accounts that are not current or that are derogatory will negatively affect the overall scoring, which could result in the denial of the application or an additional deposit may be required. 

Collection accounts exceeding a combined amount of $1,000.00 (excluding student loans and medical debt) will negatively affect the overall scoring, which could result in the denial of the application or an additional deposit may be required. 

Bankruptcy if not cleared will be an automatic denial of the rental application. 

No Guarantors permitted.

Mitigating circumstances may be considered.
                  </p>
                </div>
              </div>
            </li>
          </ul>
        </div>
        <div
          className="content-card padding-bottom-none margin-bottom--half bg-trans"
        >
          <h4
            className="content-card_title t-serif"
          >
            Additional Information
          </h4>
          <ul
            className="content-grid"
          >
            <li
              className="content-item"
            >
              <div
                className="content-card"
              >
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Required Documents
                  </h4>
                  <p>
                    Lottery winners will be required to fill out a building application and provide a copy of your current credit report, 3 most recent paystubs, current tax returns and W-2, and 3 most recent bank statements.
                  </p>
                </div>
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Smoking Policy
                  </h4>
                  <p>
                    Non-smoking building
                  </p>
                </div>
              </div>
            </li>
            <li
              className="content-item"
            >
              <div
                className="content-card"
              >
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Legal Disclaimers
                  </h4>
                  <p
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "<span style='font-size: 10pt;'><span style='font-family: arial,sans-serif;'>All BMR renters must review and acknowledge the </span></span><a href='http://sf-moh.org/index.aspx?page=295' target='_blank'><span style='font-size: 10pt;'><span style='font-family: arial,sans-serif;'><span style='color: rgb(0, 0, 255);'>Inclusionary Affordable Housing Program Monitoring and Procedures Manual 2013</span></span></span></a><span style='font-size: 10pt;'><span style='font-family: arial,sans-serif;'> that governs this property upon the signing of a lease for a BMR unit. </span></span><br> <br><span style='font-size: 10pt;'><span style='font-family: arial,sans-serif;'>Applicants should be informed that BMR rental units in some buildings may convert to ownership units in the future.  In the case of conversion, BMR renters will be afforded certain rights as explained in the </span></span><a href='http://sf-moh.org/index.aspx?page=295' target='_blank'><span style='font-size: 10pt;'><span style='font-family: arial,sans-serif;'><span style='color: rgb(0, 0, 255);'>Inclusionary Affordable Housing Program Monitoring and Procedures Manual 2013</span></span></span></a><span style='font-size: 10pt;'><span style='font-family: arial,sans-serif;'>. Applicants should inquire with the building contact person listed above to determine if the building has a minimum number of years that it must remain a rental building.  (Some buildings may have such restrictions based on government sources of financing for their building.) Most buildings may have no restrictions on conversion at all. </span></span><br> <br><span style='font-size: 10pt;'><span style='font-family: arial,sans-serif;'>It is also important to note that units governed by the Inclusionary Housing Program are NOT governed by the San Francisco Rent Ordinance (also known as “rent control”). Among other rules, rents may increase beyond increases allowed under “rent control.”  Please see the </span></span><span style='font-size: 12pt;'><span style='font-family: times new roman,serif;'><a href='http://sf-moh.org/index.aspx?page=295' target='_blank'><span style='font-size: 10pt;'><span style='font-family: arial,sans-serif;'><span style='color: rgb(0, 0, 255);'>Inclusionary Affordable Housing Program Monitoring and Procedures Manual 2013</span></span></span></a></span></span><span style='font-size: 10pt;'><span style='font-family: arial,sans-serif;'> for more information. </span></span>",
                      }
                    }
                  />
                </div>
                <div
                  className="margin-bottom--half"
                >
                  <h4
                    className="t-sans t-small t-bold no-margin"
                  >
                    Pet Policy
                  </h4>
                  <p>
                    Dogs are not allowed in the building.
                  </p>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </section>,
]
`;
